--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-transform-flow-strip-types": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-flow": "^7.0.0",
@@ -50,13 +51,15 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "base16": "^1.0.0",
     "child-process-promise": "^2.2.1",
     "chrome-launch": "^1.1.4",
     "classnames": "2.2.1",
     "cli-spinners": "^1.0.0",
     "clipboard-js": "^0.3.6",
+    "codemirror": "^5.45.0",
+    "color": "^3.1.0",
     "css-loader": "^1.0.1",
-    "html2canvas": "^1.0.0-alpha.12",
     "error-stack-parser": "^2.0.2",
     "es6-symbol": "3.0.2",
     "escape-string-regexp": "^1.0.5",
@@ -81,8 +84,12 @@
     "flow-bin": "^0.94.0",
     "fs-extra": "^3.0.1",
     "gh-pages": "^1.0.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "immutable": "3.7.6",
+    "javascript-stringify": "^2.0.0",
     "jest": "22.1.4",
+    "jsondiffpatch": "^0.3.11",
+    "jsondiffpatch-for-react": "^1.0.3",
     "lerna": "^2.8.0",
     "lint-staged": "^7.0.5",
     "log-update": "^2.0.0",
@@ -97,13 +104,19 @@
     "react": "^16.8.4",
     "react-color": "^2.11.7",
     "react-dom": "^16.8.4",
+    "react-icons": "^3.5.0",
     "react-is": "^16.8.4",
+    "react-json-tree": "^0.11.2",
+    "react-jsonschema-form": "^1.4.0",
     "react-portal": "^3.1.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.5.1",
+    "redux-devtools-themes": "^1.0.0",
     "scheduler": "^0.13",
     "semver": "^5.5.1",
+    "simple-element-resize-detector": "^1.2.0",
     "style-loader": "^0.23.1",
+    "styled-components": "^4.2.0",
     "web-ext": "^1.10.1",
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
